docs/getting-started/openshift/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deployment-example
  name: stable-service
  namespace: argo-rollouts
spec:
  type: ClusterIP
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: deployment-example
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deployment-example
  name: canary-service
spec:
  type: ClusterIP
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: deployment-example
