docs/getting-started/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: rollouts-demo
  name: main-route
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: stable-service
    weight: 100
